Removed extra file

--- a/AirlineReservation/AirApp/templates/navigation.html
+++ b/AirlineReservation/AirApp/templates/navigation.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <nav>
 	<ul>
-		<li><a href = "/">Home</a></li>
-		<li><a href = '{% url : "Account:Register" %}'></a></li>
-		<li><a href = '{% url : "Account:Login" %}'></a></li>
-		<li><a href = '{% url : "Account:Logout" %}'></a></li>
+		<!-- <li><a href = "/">Home</a></li> -->
+		<li><a href = '{% url : "Account:Register" %}'>Register</a></li>
+		<li><a href = '{% url : "Account:Login" %}'>Login</a></li>
+		<li><a href = '{% url : "Account:Logout" %}'>Logout</a></li>
 	</ul>
 </nav>
