--- a/AirlineReservation/User/templates/MessagePage.html
+++ b/AirlineReservation/User/templates/MessagePage.html
@@ -4,7 +4,7 @@
 		<title>{{title}}</title>
 	</head>
 	<body>
-	{% load "navigation.html" %}
+	{% include "navigation.html" %}
 		{{message}}
 	</body>
 </html>
