--- a/AirlineReservation/User/templates/navigation.html
+++ b/AirlineReservation/User/templates/navigation.html
@@ -1,8 +1,8 @@
 <nav>
 	<ul>
 		<li><a href = "/">Home</a></li>
-		<li><a href = '{% url  "Register" %}'>Register</a></li>
-		<li><a href = '{% url  "Login" %}'>Login</a></li>
-		<li><a href = '{% url  "Logout" %}'>Logout</a></li>
+		<li><a href = '{% url  "User:Register" %}'>Register</a></li>
+		<li><a href = '{% url  "User:Login" %}'>Login</a></li>
+		<li><a href = '{% url  "User:Logout" %}'>Logout</a></li>
 	</ul>
 </nav>
