--- a/AirlineReservation/User/templates/FormPage.html
+++ b/AirlineReservation/User/templates/FormPage.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>{{title}}</title>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
+  		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
 	</head>
 	<body>
 	{% include "navigation.html" %}
@@ -14,4 +17,11 @@
 			<input type="submit" />
 		</form>
 	</body>
+	<script>
+		$(function () {
+    			$("#id_date").datetimepicker({
+      				format: 'd/m/Y H:i',
+    			});
+  		});
+</script>
 </html>
