Added the flights display page

--- a/AirlineReservation/User/templates/navigation.html
+++ b/AirlineReservation/User/templates/navigation.html
@@ -7,5 +7,6 @@
 		<li><a href = '{% url  "User:Register" %}'>Register</a></li>
 		<li><a href = '{% url  "User:Login" %}'>Login</a></li>
 		{% endif %}
+		<li><a href = '{% url "App:FullList" %}'>Full List of Flights</a></li>
 	</ul>
 </nav>
