Date selector added

--- a/AirlineReservation/User/templates/FormPage.html
+++ b/AirlineReservation/User/templates/FormPage.html
@@ -22,6 +22,12 @@
     			$("#id_date").datetimepicker({
       				format: 'd/m/Y H:i',
     			});
+    			$("#id_departure").datetimepicker({
+      				format: 'd/m/Y H:i',
+    			});
+    			$("#id_reach").datetimepicker({
+      				format: 'd/m/Y H:i',
+    			});
   		});
 </script>
 </html>
