--- a/AirlineReservation/AirApp/templates/FormPage.html
+++ b/AirlineReservation/AirApp/templates/FormPage.html
@@ -1,7 +1,11 @@
 {% extends "Template.html" %}
 {% block body_block %}
 	{% if error %}
-		<p> {{error_msg}} </p>
+	<div class="error-block">
+		{% for i in error_msg %}
+			<li> {{i}} </li>
+		{% endfor %}
+	</div>
 	{% endif %}
 	<form method="POST">
 		{% csrf_token %}
