--- a/AirlineReservation/AirApp/templates/ProfilePage.html
+++ b/AirlineReservation/AirApp/templates/ProfilePage.html
@@ -1,6 +1,13 @@
 {% extends "Template.html" %}
 {% block body_block %}
 
-This is your profile.
+<h1> Your profile </h1>
+<p>
+Username : {{ passenger.user.username }}<br>
+Email : {% if passenger.email %} {{passenger.user.email}} {% else %} Not set {% endif %}
+</p>
+<br>
+<h3>Tickets: </h3>
+
 
 {% endblock %}
