--- a/AirlineReservation/AirApp/templates/ProfilePage.html
+++ b/AirlineReservation/AirApp/templates/ProfilePage.html
@@ -2,12 +2,28 @@
 {% block body_block %}
 
 <h1> Your profile </h1>
-<p>
-Username : {{ passenger.user.username }}<br>
-Email : {% if passenger.email %} {{passenger.user.email}} {% else %} Not set {% endif %}
-</p>
+<div class="userinfoblock">
+	<p>
+		Username : {{ passenger.user.username }}<br>
+		Email : {% if passenger.email %} {{passenger.user.email}} {% else %} Not set {% endif %}
+	</p>
+</div>
 <br>
 <h3>Tickets: </h3>
-
+{% if passenger.tickets|length %}
+	{% for i in tickets %}
+		<div class="ticketblock">
+			<table>
+				<tr><td>Ticket No.</td><td>{{ i.number }}</td></tr>
+				<tr><td>Flight No.</td><td>{{ i.flight.number }}</td></tr>
+				<tr><td>Passengers</td><td>{{ i.n_passengers }}</td></tr>
+				<tr><td>Booking Time</td><td>{{ i.booked_at }}</td></tr>
+				<tr><td>Price</td><td>{{ i.flight.price_per_head*i.n_passengers }}</td></tr>
+			</table>
+		</div>
+	{% endfor %}
+{% else %}
+	<h5> No tickets book yet...<br> Book now and let's travel!</h5>
+{% endif %}
 
 {% endblock %}
