--- a/AirlineReservation/AirApp/templates/FlightList.html
+++ b/AirlineReservation/AirApp/templates/FlightList.html
@@ -8,6 +8,11 @@
 			<h1> Number : {{ flight.number }} </h1>
 			<p> {{ flight.source }} to {{ flight.destination }} </p>
 			<p> {{ flight.vacancy }} seats left out of {{ flight.capacity }} </p>
+			{% if flight.vacancy == 0 %}
+				<a class="btn btn-deactivated">Seats Full</a>
+			{% else %}
+				<a href="/book/{{ flight.pk }}" class="btn">Book now</a>
+			{% endif %}
 		</div>
 		{% endfor %}
 	{% endif %}
