--- a/AirlineReservation/AirApp/templates/ProfilePage.html
+++ b/AirlineReservation/AirApp/templates/ProfilePage.html
@@ -10,13 +10,13 @@
 </div>
 <br>
 <h3>Tickets: </h3>
-{% if passenger.tickets|length %}
-	{% for i in tickets %}
+{% if passenger.tickets.all|length %}
+	{% for i in passenger.tickets.all %}
 		<div class="ticketblock">
 			<table>
 				<tr><td>Ticket No.</td><td>{{ i.number }}</td></tr>
 				<tr><td>Flight No.</td><td>{{ i.flight.number }}</td></tr>
-				<tr><td>Passengers</td><td>{{ i.n_passengers }}</td></tr>
+				<tr><td>Passengers</td><td>{{ i.n_passenger }}</td></tr>
 				<tr><td>Booking Time</td><td>{{ i.booked_at }}</td></tr>
 				<tr><td>Price</td><td>{{ i.totalPrice }}</td></tr>
 			</table>
