minor styling stuff

--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
 		{% include "navigation.html" %}
-		{% block body_block %}
-		{% endblock %}
+		<div class="container main-body-block">
+			{% block body_block %}
+			{% endblock %}
+		</div>
 	</body>
 </html>
