--- a/AirlineReservation/AirApp/templates/ProfilePage.html
+++ b/AirlineReservation/AirApp/templates/ProfilePage.html
@@ -12,15 +12,16 @@
 <h3>Tickets: </h3>
 {% if passenger.tickets.all|length %}
 	{% for i in passenger.tickets.all %}
-		<div class="ticketblock">
-			<table>
-				<tr><td>Ticket No.</td><td>{{ i.number }}</td></tr>
-				<tr><td>Flight No.</td><td>{{ i.flight.number }}</td></tr>
-				<tr><td>Passengers</td><td>{{ i.n_passenger }}</td></tr>
-				<tr><td>Booking Time</td><td>{{ i.booked_at }}</td></tr>
-				<tr><td>Price</td><td>{{ i.totalPrice }}</td></tr>
+		<div class="container ticketblock">
+			<table class="table">
+				<tr><td>Ticket No.  </td><td>{{ i.number }}</td></tr>
+				<tr><td>Flight No.  </td><td>{{ i.flight.number }}</td></tr>
+				<tr><td>Passengers  </td><td>{{ i.n_passenger }}</td></tr>
+				<tr><td>Booking Time  </td><td>{{ i.booked_at }}</td></tr>
+				<tr><td>Price  </td><td>{{ i.totalPrice }}</td></tr>
 			</table>
 		</div>
+		<hr>
 	{% endfor %}
 {% else %}
 	<h3> No tickets book yet...<br> Book now and let's travel!</h3>
