--- a/AirlineReservation/AirApp/templates/navigation.html
+++ b/AirlineReservation/AirApp/templates/navigation.html
@@ -1,17 +1,48 @@
-<nav>
-	<ul>
-		<li><a href = "/">Home</a></li>
-		{% if user.is_authenticated %}
-			<li><a href = '{% url  "App:Profile" %}'>View Profile</a></li>
-			<li><a href = '{% url  "User:Logout" %}'>Logout</a></li>
-			{% if user.is_superuser %}
-			<li><a href = '{% url "App:AddFlight" %}'>Add a Flight</a></li>
-			<li><a href = '{% url "App:Flush" %}'>Flush All Data</a></li>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #66ffcc;">
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  	<div class="collapse navbar-collapse" id="navbarText">
+	<ul class="navbar-nav mr-auto">
+		<li class="nav-item"><a class="nav-link" href = "/">Home</a></li>
+		<li class="nav-item"><a class="nav-link" href = '{% url "App:FullList" %}'>Full List of Flights</a></li>
+		{% if user.is_superuser %}
+			<li class="nav-item"><a class="nav-link" href = '{% url "App:AddFlight" %}'>Add a Flight</a></li>
+			<li class="nav-item"><a class="nav-link" href = '{% url "App:Flush" %}'>Flush All Data</a></li>
 			{% endif %}
-		{% else %}
-			<li><a href = '{% url  "User:Register" %}'>Register</a></li>
-			<li><a href = '{% url  "User:Login" %}'>Login</a></li>
-		{% endif %}
-		<li><a href = '{% url "App:FullList" %}'>Full List of Flights</a></li>
 	</ul>
+		{% if user.is_authenticated %}
+		<ul class="navbar-nav ml-auto nav-flex-icons">
+		<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user"></i>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right dropdown-default"
+          aria-labelledby="navbarDropdownMenuLink-333">
+          <a class="dropdown-item" href = '{% url  "App:Profile" %}'>View Profile</a>
+          <a class="dropdown-item" href = '{% url  "User:Logout" %}'>Logout</a>
+        </div>
+    	</li>
+    	</ul>
+			
+			
+		{% else %}
+		<ul class="navbar-nav ml-auto nav-flex-icons">
+		<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-user"></i>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right dropdown-default"
+          aria-labelledby="navbarDropdownMenuLink-333">
+          <a class="dropdown-item" href = '{% url  "User:Register" %}'>Register</a>
+          <a class="dropdown-item" href = '{% url  "User:Login" %}'>Login</a>
+        </div>
+        </li>
+		</ul>			
+		{% endif %}
+		
+	
+	</div>
 </nav>
