--- a/AirlineReservation/AirApp/templates/ConfirmationDelete.html
+++ b/AirlineReservation/AirApp/templates/ConfirmationDelete.html
@@ -1,11 +1,11 @@
 {% extends "Template.html" %}
 {% block body_block %}
 
-<h3> Are you sure you want to cancel the ticket? </h3>
+<h3> {{ message }} </h3>
 <form method="POST">
 	{% csrf_token %}
 	<input type="submit" class="btn btn-danger" value="Yes, Delete"></input>
-	<a href='{% url "App:Profile" %}' class="btn btn-success">No, I don't</a> 
+	<a href='{{cancelLink}}' class="btn btn-success">No, I don't</a> 
 </form>
 
 {% endblock %}
