--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -15,6 +15,7 @@
   		<script src=" {% static 'js/main.js' %}" type="text/javascript"></script>
 	</head>
 	<body>
+		<h1 style="text-align: center; font-family: comic sans MS; margin-top: 70px; margin-bottom: 20px;">Airline Reservation System</h1>
 		{% include "navigation.html" %}
 		<div class="container main-body-block">
 			{% block body_block %}
