--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -8,11 +8,17 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href=" {% static 'css/main.css' %}" />
-		<link rel="stylesheet" href=" {% static 'css/navigation.css' %}" />
 		<link rel="stylesheet" href=" {% static 'css/form.css' %}" />
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
   		<script src=" {% static 'js/main.js' %}" type="text/javascript"></script>
+		<link rel="stylesheet" href=" {% static 'css/navigation.css' %}" />
+		<!-- <style> -->
+		<!-- 	html{ -->
+		<!-- 		background: url("/static/img/airline1.jpg") no-repeat center center fixed; --> 
+  				<!-- background-size: cover; --> 
+		<!-- 	} -->
+		<!-- </style> -->
 	</head>
 	<body>
 		<h1 style="text-align: center; font-family: comic sans MS; margin-top: 70px; margin-bottom: 20px;">Airline Reservation System</h1>
