--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -13,12 +13,12 @@
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
   		<script src=" {% static 'js/main.js' %}" type="text/javascript"></script>
 		<link rel="stylesheet" href=" {% static 'css/navigation.css' %}" />
-		<style>
-			#image-div-main{
-				background: url("/static/img/airline1.jpg") no-repeat center center fixed; 
-  				background-size: cover; 
-			}
-		</style>
+		<!-- <style> -->
+		<!-- 	#image-div-main{ -->
+		<!-- 		background: url("/static/img/airline1.jpg") no-repeat center center fixed; --> 
+  				<!-- background-size: cover; --> 
+		<!-- 	} -->
+		<!-- </style> -->
 	</head>
 	<body>
 		<div id="image-div-main"></div>
