--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -21,7 +21,7 @@
 		<!-- </style> -->
 	</head>
 	<body>
-		<div id="image-div-main"></div>
+		<!-- <div id="image-div-main"></div> -->
 		<h1 id="main-heading" style="text-align: center; font-family: comic sans MS; margin-top: 70px; margin-bottom: 20px;">Airline Reservation System</h1>
 		{% include "navigation.html" %}
 		<div class="container main-body-block">
