--- a/AirlineReservation/AirApp/templates/navigation.html
+++ b/AirlineReservation/AirApp/templates/navigation.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6a22a1;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6600ff;">
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   	<div class="collapse navbar-collapse" id="navbarText">
 	<ul class="navbar-nav mr-auto">
-		<li class="nav-item"><a class="nav-link nav-link-custom" href = "/">Home</a></li>
+		<li class="nav-item active"><a class="nav-link nav-link-custom" href = "/">Home</a></li>
 		<li class="nav-item"><a class="nav-link nav-link-custom" href = '{% url "App:FullList" %}'>Full List of Flights</a></li>
 		{% if user.is_superuser %}
 			<li class="nav-item"><a class="nav-link nav-link-custom" href = '{% url "App:AddFlight" %}'>Add a Flight</a></li>
