--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -5,93 +5,66 @@
 		<title>{{title}}</title>
 		<style type="text/css">
 			.footer {
-			   position:fixed;
-			   padding:10px;
-			   left: 0;
-			   bottom: 0;
-			   width: 100%;
-			   background-color: #000066;
-			   color: white;
-			   text-align: center;
+			   	position:fixed;
+			   	padding:10px;
+			   	left: 0;
+			   	bottom: 0;
+			   	width: 100%;
+			   	background-color: #000066;
+			   	color: white;
+			   	text-align: center;
 			}
 			form{
 				opacity:1;
+				margin : 0;
 			}
 			html,body{
 				height:100%;
 			}
-		    .view { 
-		    	min-height: 100% 
-		    }
-
+		    	.view { 
+		    		min-height: 100% 
+		    	}
+			.main-body-block{
+				background-color : rgba(0,0,0,0.8);
+				border-radius : 10px;
+			}
 		</style>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-		<link rel="stylesheet" href=" {% static 'css/main.css' %}" />
-		<link rel="stylesheet" href=" {% static 'css/form.css' %}" />
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>
   		<script src=" {% static 'js/main.js' %}" type="text/javascript"></script>
-		<link rel="stylesheet" href=" {% static 'css/navigation.css' %}" />
-		<!-- <style> -->
-		<!-- 	#image-div-main{ -->
-		<!-- 		background: url("/static/img/airline1.jpg") no-repeat center center fixed; --> 
-  				<!-- background-size: cover; --> 
-		<!-- 	} -->
-		<!-- </style> -->
 	</head>
 	<body>
-		<!-- <div id="image-div-main"></div> -->
-	
-	
 		{% include "navigation.html" %}
 		<div class="view" style="background:url('/static/img/cloud.jpg'); background-repeat: no-repeat; background-position: center center;background-size:cover;">
-
-		<div class="container main-body-block">
-			{% block body_block %}
-			{% endblock %}
-		</div>
-		
+		<br>
+			<div class="container main-body-block">
+				<br>
+				{% block body_block %}
+				{% endblock %}
+			<br>
+			</div>
+			<br><br><br><br><br><br>
 		</div>
 		<div class="footer">
-			  <div class="container-fluid text-center text-md-left">
-	<h4 style="text-align: center; color:grey" class="text-uppercase font-weight-bold">Made by</h4>
-	
-    <!-- Grid row -->
-    <div class="row">
-
-      <!-- Grid column -->
-
-      <div class="col-md-6 mt-md-0 mt-3">
-
-        <!-- Content -->
-
-        <h5 class="text-uppercase font-weight-bold">Pratik Garai</h5>
-        <p>Collaborate with me on <a href="https://github.com/PratikGarai">https://github.com/PratikGarai</a></p>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none pb-3">
-
-      <!-- Grid column -->
-      <div class="col-md-6 mb-md-0 mb-3">
-
-        <!-- Content -->
-        <h5 class="text-uppercase font-weight-bold">Ritika Sarkar</h5>
-        <p>Collaborate with me on <a href="https://github.com/ritikasarkar18">https://github.com/ritikasarkar18</a></p>
-
-      </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row -->
-
-  </div>
+			<div class="container-fluid text-center text-md-left">
+			<h4 style="text-align: center; color:grey" class="text-uppercase font-weight-bold">Made by</h4>
+			<div class="row">
+	      				<div class="col-md-6 mt-md-0 mt-3">
+        					<h5 class="text-uppercase font-weight-bold">Pratik Garai</h5>
+        					<p>Collaborate with me on <a href="https://github.com/PratikGarai">https://github.com/PratikGarai</a></p>
+     					</div>
+	      				<hr class="clearfix w-100 d-md-none pb-3">
+      					<div class="col-md-6 mb-md-0 mb-3">
+        					<h5 class="text-uppercase font-weight-bold">Ritika Sarkar</h5>
+        					<p>Collaborate with me on <a href="https://github.com/ritikasarkar18">https://github.com/ritikasarkar18</a></p>
+      					</div>
+	    			</div>
+  			</div>
 
 		</div>
 	</body>
-	
 </html>
