--- a/AirlineReservation/AirApp/templates/FormPage.html
+++ b/AirlineReservation/AirApp/templates/FormPage.html
@@ -10,7 +10,7 @@
 	<form method="POST">
 		{% csrf_token %}
 		{{ form.as_p }}
-		<input type="submit" />
+		<input type="submit" value="Submit"></input>
 	</form>
 	<script>
 		$(function () {
