--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -51,14 +51,15 @@
 		</div>
 		<div class="footer">
 			<div class="container-fluid text-center text-md-left">
-			<h4 style="text-align: center; color:grey" class="text-uppercase font-weight-bold">Made by</h4>
 			<div class="row">
 	      				<div class="col-md-6 mt-md-0 mt-3">
+						<h4 style="text-align: left; color:grey" class="text-uppercase font-weight-bold">Developer</h4>
         					<h5 class="text-uppercase font-weight-bold">Pratik Garai</h5>
         					<p>Collaborate with me on <a href="https://github.com/PratikGarai">https://github.com/PratikGarai</a></p>
      					</div>
 	      				<hr class="clearfix w-100 d-md-none pb-3">
       					<div class="col-md-6 mb-md-0 mb-3">
+						<h4 style="text-align: left; color:grey" class="text-uppercase font-weight-bold">Developer</h4>
         					<h5 class="text-uppercase font-weight-bold">Ritika Sarkar</h5>
         					<p>Collaborate with me on <a href="https://github.com/ritikasarkar18">https://github.com/ritikasarkar18</a></p>
       					</div>
