--- a/AirlineReservation/AirApp/templates/Template.html
+++ b/AirlineReservation/AirApp/templates/Template.html
@@ -4,7 +4,8 @@
 	<head>
 		<title>{{title}}</title>
 		<style type="text/css">
-			.footer {
+			.footer 
+			{
 			   	position:fixed;
 			   	padding:10px;
 			   	left: 0;
@@ -14,17 +15,25 @@
 			   	color: white;
 			   	text-align: center;
 			}
-			form{
+
+			form
+			{
 				opacity:1;
 				margin : 0;
 			}
-			html,body{
+
+			html,body
+			{
 				height:100%;
 			}
-		    	.view { 
+
+		    	.view 
+			{ 
 		    		min-height: 100% 
 		    	}
-			.main-body-block{
+
+			.main-body-block
+			{
 				background-color : rgba(0,0,0,0.8);
 				border-radius : 10px;
 			}
