--- a/AirlineReservation/AirApp/templates/navigation.html
+++ b/AirlineReservation/AirApp/templates/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6600ff;">
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    		<span class="navbar-toggler-icon"></span>
+  	</button>
   	<div class="collapse navbar-collapse" id="navbarText">
 	<ul class="navbar-nav mr-auto">
 		<li class="nav-item active"><a class="nav-link nav-link-custom" href = "/">Home</a></li>
@@ -9,48 +9,40 @@
 		{% if user.is_superuser %}
 			<li class="nav-item"><a class="nav-link nav-link-custom" href = '{% url "App:AddFlight" %}'>Add a Flight</a></li>
 			<li class="nav-item"><a class="nav-link nav-link-custom" href = '{% url "App:Flush" %}'>Flush All Data</a></li>
-			{% endif %}
-	</ul>
-		{% if user.is_authenticated %}
-		<ul class="navbar-nav ml-auto nav-flex-icons">
-		<li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  			<path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-  			<path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-  			<path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-		</svg>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item nav-link-custom" href = '{% url  "App:Profile" %}'>View Profile</a>
-          <a class="dropdown-item nav-link-custom" href = '{% url  "User:Logout" %}'>Logout</a>
-        </div>
-    	</li>
-    	</ul>
-			
-			
-		{% else %}
-		<ul class="navbar-nav ml-auto nav-flex-icons">
-		<li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  			<path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
-  			<path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-  			<path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
-		</svg>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right dropdown-default"
-          aria-labelledby="navbarDropdownMenuLink-333">
-          <a class="dropdown-item" href = '{% url  "User:Register" %}'>Register</a>
-          <a class="dropdown-item" href = '{% url  "User:Login" %}'>Login</a>
-        </div>
-        </li>
-		</ul>			
 		{% endif %}
-		
-	
+	</ul>
+	{% if user.is_authenticated %}
+	<ul class="navbar-nav ml-auto nav-flex-icons">
+		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	        		<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  					<path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
+	  				<path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+  					<path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
+				</svg>
+        		</a>
+  		      	<div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+		          	<a class="dropdown-item nav-link-custom" href = '{% url  "App:Profile" %}'>View Profile</a>
+          			<a class="dropdown-item nav-link-custom" href = '{% url  "User:Logout" %}'>Logout</a>
+       			</div>
+    		</li>
+    	</ul>
+	{% else %}
+	<ul class="navbar-nav ml-auto nav-flex-icons">
+		<li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		          	<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-person-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  					<path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 0 0 8 15a6.987 6.987 0 0 0 5.468-2.63z"/>
+	  				<path fill-rule="evenodd" d="M8 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+  					<path fill-rule="evenodd" d="M8 1a7 7 0 1 0 0 14A7 7 0 0 0 8 1zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"/>
+				</svg>
+		        </a>
+        		<div class="dropdown-menu dropdown-menu-right dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
+          			<a class="dropdown-item" href = '{% url  "User:Register" %}'>Register</a>
+          			<a class="dropdown-item" href = '{% url  "User:Login" %}'>Login</a>
+        		</div>
+        	</li>
+	</ul>			
+	{% endif %}
 	</div>
 </nav>
