Added some css stuff

--- a/AirlineReservation/AirApp/templates/FlightList.html
+++ b/AirlineReservation/AirApp/templates/FlightList.html
@@ -9,7 +9,7 @@
 		<div class = "flight-div">
 			<h1 style="font-family: serif; margin-top:30px;"> Flight {{ flight.number }} </h1>
 			<p style="color:green; font-size: 20px;"> {{ flight.source }} to {{ flight.destination }} </p>
-			<table class="table times" style="border-style: double;border-radius: 35px;">
+			<table class="table times" style="border-style: double;border-radius: 35px;border-color:white;">
 				<tr>
 					<td> Departure : </td>
 					<td> {{flight.departure}} </td>
